# Linkstoraginator

./: .dockerignore  Cargo.toml  Dockerfile  NOTICE  README.md
src/: main.rs  meta_extrator.rs  recipe_dao.rs  utils.rs
src/types/: api_response.rs  meta.rs  mod.rs  recipe.rs
templates/: index.html.hbs  recipe.html.hbs  recipes.html.hbs
