[package]
name = "recipe_storage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0", features = ["json"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
tokio = "1.36.0"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4.34", features = ["serde"] }
lazy_static = "1.4.0"
futures = "0.3.30"
anyhow = "1.0.82"
reqwest = { version = "0.11", features = ["json"] }
scraper = "0.13"
regex = "1"
bson = "2.10.0"
chrono-tz = "0.6"  # For timezone handling
chrono-humanize = "0.1"  # For human-friendly time descriptions

[dependencies.mongodb]
version = "2.8.1"
default-features = false
features = ["async-std-runtime"]

[dependencies.rocket_dyn_templates]
version = "0.1.0"
features = ["handlebars", "tera"]
